--- a/css/carrito_compras.css
+++ b/css/carrito_compras.css
@@ -1,111 +1,190 @@
-*{
+* {
     font-family: Tahoma, sans-serif;
     margin: 0;
     padding: 0;
 }
-.menu{
-   border-bottom: 0.7px solid rgb(197, 196, 196);
-   width: 100%;
-   margin-bottom: 40px;
+
+.menu {
+    /* position: fixed ;
+    top: 0; */
+    border-bottom: 0.7px solid rgb(197, 196, 196);
+    width: 100%;
+    height: 80px;
+    margin-bottom: 20px;
+    background-color: white;
+    
 }
-nav{
+
+nav {
     display: flex;
-   
 }
-ul{
+
+ul {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
-li{
+
+li {
     list-style: none;
     padding: 20px;
-    margin:5px;
+    margin: 5px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 0.9em;
 }
-li:hover{
+
+li:hover {
     border-bottom: 2px solid rgb(255, 125, 26);
 }
-a{
+
+a {
     text-decoration: none;
     color: gray;
 }
-.shopping-car{
-  
+
+.shopping-car {
+    position: relative;
+    left: 90%;
     list-style: none;
     padding: 20px;
-    margin:5px;
+    margin: 5px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 0.9em;
+    color: gray;
+    /* z-index: -1; */
+    
 }
-.lado{
-    margin: 0 1250px ;
+
+.img-avatar {
+    z-index: 0;
+    width: 45px;
+    border-radius: 100%; 
+    position: relative;
+    left: 90%;
+    text-align: right;
 }
-h1{
+.img-avatar:hover{
+    border:solid 3px rgb(255, 125, 26);
+}
+
+
+
+.lado {
+    display: flex;
+    justify-content: last baseline;
+    align-items: center;
+    position: relative;
+    right: 0;
+    left: 115%;
+}
+
+h1 {
     text-align: center;
 }
-.box-main{
-    margin: 0 70px;
-    display: grid;
-    grid-template: "img-box-main    empty"/
-                    435px             1fr;
+
+h2 {
+    color: black;
+    font-size: 2.5em;
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 30px;
 }
-.img-box-main{
+
+.orange {
+    font-size: 1.2em;
+    color: #f07313;
+    margin-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.txt {
+    color: rgb(123, 123, 125);
+    font-size: 1em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 30px;
+}
+
+.box-main {
+
+    margin: 40px 70px; 
+    /* margin: 70px; */
+
+    display: grid;
+    grid-template: "img-box-main    empty" /
+        435px 1fr;
+}
+
+.img-box-main {
     display: grid;
     width: 100%;
-    grid-template:"img-box     img-box       img-box       img-box    img-box      img-box    img-box" 435px
-                  "empty-0     empty-0       empty-0       empty-0    empty-0      empty-0    empty-0" 30px
-                  "box-img-1   empty-1       box-img-2     empty-2    box-img-3    empty-3    box-img-4" 90px/ 
-                   90px        25px          90px          25px       90px         25px       90px
+    grid-template: "img-box     img-box       img-box       img-box    img-box      img-box    img-box" 435px
+        "empty-0     empty-0       empty-0       empty-0    empty-0      empty-0    empty-0" 30px
+        "box-img-1   empty-1       box-img-2     empty-2    box-img-3    empty-3    box-img-4" 90px/ 90px 25px 90px 25px 90px 25px 90px
 }
-.img-box{
+
+.img-box {
     grid-area: img-box;
     width: 100%;
     margin-bottom: 30px;
     border-radius: 10px;
     cursor: pointer;
 }
-.box-img-1{
+
+.box-img-1 {
     grid-area: box-img-1;
 }
-.box-img-2{
+
+.box-img-2 {
     grid-area: box-img-2;
 }
-.box-img-3{
+
+.box-img-3 {
     grid-area: box-img-3;
 }
-.box-img-4{
+
+.box-img-4 {
     grid-area: box-img-4;
 }
-.img-mini{
+
+.img-mini {
     width: 100%;
     border-radius: 10px;
     cursor: pointer;
 }
-.box-img-mini{
-  
+
+.box-img-mini {
+    z-index: 1;
     border: 2px solid rgb(255, 125, 26);
     border-radius: 15px;
 }
-.img-mini-activo{
+
+.img-mini-activo {
+    z-index: 1;
     opacity: 0.4;
+    color: rgb(255, 255, 255);
 }
-.cant-box{
+
+.cant-box {
     display: flex;
-   flex-direction: row;
-    margin: 0 70px;
+    flex-direction: row;
+    /*  margin: 0 70px; */
 }
-.valor-pro{
+
+.valor-pro {
     display: flex;
-    flex-direction: row; 
-} 
-.precio{
-    margin-left: 78px;
+    flex-direction: row;
+}
+
+.precio {
+    /*  margin-left: 78px; */
+    color: black;
     font-size: 2em;
     font-weight: bolder;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding: 2px;
+    padding-bottom: 20px;
 }
-.icon-po{
+
+.icon-po {
     width: 50px;
     height: 50px;
     background-color: rgb(230, 230, 230);
@@ -113,103 +192,114 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
     border: 1px solid whitesmoke;
-    
+
 }
-.cant-obj{
+
+.cant-obj {
     color: black;
     font-size: 1.3em;
 }
-.subs-obj{
+
+.subs-obj {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     cursor: pointer;
 }
-.add-obj{
+
+.add-obj {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     cursor: pointer;
 }
-.buy-box{
-    margin: 0 15px;
+
+.buy-box {
+    margin: 80px 70px;
 }
-.confir-compra{
+
+.confir-compra {
     margin: 0 15px;
     display: flex;
     text-align: center;
     background-color: #f07313;
     border-radius: 10px;
     border: solid 1px black;
-    height: 50px;  
+    height: 50px;
+    box-shadow: 2px 15px 20px #eca976;
 }
-.confir-compra:hover{
-    background-color: #eca976;
+
+.confir-compra:hover {
+    background-color: #e79557;
     border: none;
     border-radius: 40px 10px;
-    
     transition: all 0.5s;
+
 }
-.text-com{
+
+.text-com {
     color: white;
     margin: 2px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin-top: 10px;
     margin-left: 15px;
     margin-right: 15px;
 }
-.espacio{
+
+.espacio {
     margin: 10px;
 }
-.product-add{
-    position: absolute;
-    top:5%;
+
+.product-add {
+     
+    position: fixed;
+    top: 0%;
     right: 0;
-    left: 91%;
+    left: 85%;
     border: solid 2px black;
     background-color: #f07313;
     border-radius: 100%;
-    width: 20px;
-    height: 20px;
-    visibility: hidden;    
-}
-.product-add-activo{
-   /*  position: absolute;
-    top:5%;
-    right: 0;
-    left: 91%; */
-    border: solid 1px black;
-    background-color: #f07313;
-    border-radius: 100%;
-    width: 12px;
-    height: 18px; 
-    visibility: visible;    
+    margin-bottom: 1px;
+    visibility: hidden;
 }
 
-#Product-add{
+.product-add-activo {
+   
+    width: 29px;
+    height: 20px;
+    background-color: #f07313;
+    border-radius: 100px;
+   visibility: visible;
+   text-align: center;
+}
+
+#Product-add {
     color: rgb(10, 10, 10);
     font-size: 18px;
     padding: 3px;
-    
+
 }
-.lighbox{
+
+.lighbox {
     position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(64,64,64,.9);
+    background-color: rgb(64, 64, 64, .9);
     width: 100%;
     height: 100vh;
-}
-.main-lighbox{
-    width: 450px;
-    height: 600px;
-  /*   background-color: red; */ 
+    z-index: 5;
 }
 
-.btn-style{
+.main-lighbox {
+    width: 450px;
+    height: 600px;
+    /* background-color: red;  */
+}
+
+.btn-style {
     border-radius: 50%;
     width: 46px;
     height: 46px;
@@ -217,46 +307,94 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(24,24,24);
+    color: rgb(24, 24, 24);
     position: relative;
-    top:198px;
+    top: 198px;
 }
-.ligh-hidden{
+
+.ligh-hidden {
     display: none;
 }
-.btn-adelante{
-    left:95%;
+
+.btn-adelante {
+    left: 95%;
     z-index: 20;
-    top:152px
+    top: 152px
 }
-.btn-atras{
+
+.btn-atras {
     left: -25px;
     z-index: 20;
 }
-.btn-cerrar{
-    top: 0;
-    left: 90%;
+
+.btn-cerrar {
+    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.3em
+    left: 95%;
+    font-size: 1.3em;
+    z-index: 400;
+    font-size: 1.5em;
+    color:#f07313;
+
 }
-.style-btn{
+
+.style-btn {
     font-weight: 900;
     font-size: 1.3em;
 }
-.img-main-ligh{
+
+.img-main-ligh {
     position: relative;
+    grid-area: img-main;
     top: -88px;
     width: 100%;
+    height: 410px;
     border-radius: 20px;
     z-index: 10;
+    animation: infinite;
+    transition: animation 15s;
 }
-.img-box-main-big{
+
+.box-ImgSecond1 {
+    grid-area: img-secundary-1;
+}
+
+.box-ImgSecond2 {
+    grid-area: img-secundary-2;
+}
+
+.box-ImgSecond3 {
+    grid-area: img-secundary-3;
+}
+
+.box-ImgSecond4 {
+    grid-area: img-secundary-4;
+}
+
+.img-secundary {
+    
+    width: 100px;
+    /* height: 80px; */
+    border-radius: 10px;
+    cursor: pointer;
+} 
+
+.box-img-activo {
     display: grid;
     width: 100%;
-    grid-template:"img-box     img-box       img-box       img-box    img-box      img-box    img-box" 475px
-                  "empty-0     empty-0       empty-0       empty-0    empty-0      empty-0    empty-0" 30px
-                  "box-img-1   empty-1       box-img-2     empty-2    box-img-3    empty-3    box-img-4" 90px/ 
-                   105px       20px          105px         20px       105px        20px       105px
+    grid-template: " img-main          img-main      img-main            img-main   img-main           img-main   img-main       " 370px 
+                    "empty-0           empty-0       empty-0             empty-0    empty-0            empty-0    empty-0        " 1px  
+                    "img-secundary-1   empty-1       img-secundary-2     empty-2    img-secundary-3    empty-3    img-secundary-4 "20px /
+                    98px               20px          98px                20px       98px               20px       97px;
+}
+.box-radio {
+    
+    border: 2px solid rgb(255, 125, 26);
+    border-radius: 15px;
+}
+
+.img-opaca {
+    z-index: 6;
+    opacity: 0.4;
+    background-color: rgb(113, 21, 21);
 }
